MOON-55 : fixed vertical overflow

--- a/src/globals/_layout.scss
+++ b/src/globals/_layout.scss
@@ -47,11 +47,14 @@
 // ---
 :global(.flexCol) {
     @extend %flex-column;
+
+    min-height: 0;
 }
 
 :global(.flexCol_nowrap) {
     display: flex;
     flex-direction: column;
+    min-height: 0;
 }
 
 :global(.flexCol_reverse) {
